fixed dimension with for wrap container

--- a/openquakeplatform/static/geonode/css/platform.css
+++ b/openquakeplatform/static/geonode/css/platform.css
@@ -57,7 +57,7 @@ input[type="checkbox"], input[type="radio"] {
     width: 980px;
 }
 #wrap .container {
-    width: 980px;
+    width: 100%;
 }
 #wrap .big-search,
 #datasets,
@@ -454,7 +454,14 @@ div#search-inp:after {
     background: #cc3d20;
     border-color: #f7931e;
 }
+#oq-context-ribbon {
+    display: none;
+}
 
+#oq-body-wrapper {
+    margin-left: 30px;
+    margin-right: 30px;
+}
 
 /*mobile*/
 @media (max-width: 991px) {
